# LLM_Storytelling

./: .gitignore  LICENSE  README.md  __init__.py  compose.yaml  conftest.py  pyproject.toml  requirements.txt  schema.sql  setup.py
llm_story_generator/: __init__.py  config.py  db_manager.py  main.py  story_browser.py  story_generator.py
tests/: conftest.py  requirements-test.txt  test_db_manager.py  test_db_manager_new.py  test_story_generator.py  test_story_generator_new.py
